Playbook and files, now jinja2 templates, changed to use variables

--- a/templates/demoapp.conf.j2
+++ b/templates/demoapp.conf.j2
@@ -1,6 +1,6 @@
 [program:demoapp]
-command = /home/vagrant/demo-app/venv/bin/gunicorn_start
-directory = /home/vagrant/demo-app
+command = {{ venv_path }}/bin/gunicorn_start
+directory = {{ project_path }}
 user = vagrant
 autostart = true
 autorestart = true
